// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TESTING ChatItemTargetText RENDER continuous should match snapshot 1`] = `
<View
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "marginBottom": 4,
      "marginTop": 4,
      "maxWidth": 300,
      "paddingLeft": 10,
      "paddingRight": 60,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 12,
        "height": 24,
        "marginRight": 4,
        "width": 24,
      }
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "#F5F6F7",
        "borderRadius": 8,
        "borderTopStartRadius": 0,
        "flex": 1,
        "paddingBottom": 8,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 4,
      }
    }
  >
    <Text
      style={
        Object {
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "lineHeight": 19.36,
        }
      }
      testID="chat-item-message"
    >
      message
    </Text>
  </View>
</View>
`;

exports[`TESTING ChatItemTargetText RENDER not continuous should match snapshot 1`] = `
<View
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "marginBottom": 4,
      "marginTop": 4,
      "maxWidth": 300,
      "paddingLeft": 10,
      "paddingRight": 60,
    }
  }
>
  <View
    style={
      Object {
        "marginRight": 4,
      }
    }
  >
    https://www.google.com
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#F5F6F7",
        "borderRadius": 8,
        "borderTopStartRadius": 0,
        "flex": 1,
        "paddingBottom": 8,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 4,
      }
    }
  >
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
        }
      }
      testID="chat-item-user-info"
    >
      <Text
        style={
          Object {
            "fontFamily": "Inter-SemiBold",
            "fontSize": 12,
            "lineHeight": 19.36,
          }
        }
      >
        username
      </Text>
      <View
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#1E1F20",
            "borderRadius": 2,
            "height": 3,
            "marginLeft": 5,
            "marginRight": 5,
            "width": 3,
          }
        }
      />
      <Text
        style={
          Object {
            "alignSelf": "center",
            "fontFamily": "Inter-ExtraLight",
            "fontSize": 10,
            "lineHeight": 12.19,
          }
        }
      >
        time
      </Text>
    </View>
    <Text
      style={
        Object {
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "lineHeight": 19.36,
        }
      }
      testID="chat-item-message"
    >
      message
    </Text>
  </View>
</View>
`;
